; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_kevent_qos.c_get_user_promotion_basepri.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_kevent_qos.c_get_user_promotion_basepri.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread_policy_state = type { i32 }

@THREAD_POLICY_STATE_COUNT = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@THREAD_POLICY_STATE = common dso_local global i32 0, align 4
@T_QUIET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"thread_policy_get\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @get_user_promotion_basepri to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_user_promotion_basepri() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.thread_policy_state, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = load i32, i32* @THREAD_POLICY_STATE_COUNT, align 4
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* @FALSE, align 4
  store i32 %7, i32* %3, align 4
  %8 = call i32 (...) @pthread_self()
  %9 = call i32 @pthread_mach_thread_np(i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @THREAD_POLICY_STATE, align 4
  %12 = ptrtoint %struct.thread_policy_state* %2 to i32
  %13 = call i32 @thread_policy_get(i32 %10, i32 %11, i32 %12, i32* %1, i32* %3)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* @T_QUIET, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @T_ASSERT_MACH_SUCCESS(i32 %15, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %17 = getelementptr inbounds %struct.thread_policy_state, %struct.thread_policy_state* %2, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  ret i32 %18
}

declare dso_local i32 @pthread_mach_thread_np(i32) #1

declare dso_local i32 @pthread_self(...) #1

declare dso_local i32 @thread_policy_get(i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @T_ASSERT_MACH_SUCCESS(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
